--- a/frontend/src/app/settings/trailer/trailer.component.html
+++ b/frontend/src/app/settings/trailer/trailer.component.html
@@ -271,13 +271,26 @@
                 </div>
             </div>
         </div>
+        <div class="content-label">
+            <label for="update_plex">Refresh Plex Media</label>
+            <small>Auto refresh content in Plex Media Server after a download.</small>
+        </div>
+        <div id="update_plex" class="options-bar">
+            <div *ngFor="let option of trueFalseOptions" class="option" tabindex="2"
+                [class.selected]="option === settings?.update_plex"
+                (click)="updateSetting('update_plex', option)"
+                (keydown.enter)="updateSetting('update_plex', option)"
+                (keydown.space)="updateSetting('update_plex', option)">
+                {{option}}
+            </div>
+        </div>
         <div *ngIf="settings?.update_plex" class="trailer-content">
             <div class="content-label">
                 <label for="plex_auth_token">Plex Auth Token</label>
                 <small>Authentication token for Plex</small>
             </div>
             <div class="text-input">
-                <input id="plex_auth_token" type="password" [(ngModel)]="plexAuthToken" 
+                <input id="plex_auth_token" type="text" [(ngModel)]="plexAuthToken" 
                     placeholder="Plex Auth Token" autocomplete="off" tabindex="20">
                 <button *ngIf="settings?.plex_auth_token != plexAuthToken" class="primary icononly-button"
                     id="update_plex_auth_token" tabindex="21" (click)="updateSetting('plex_auth_token', plexAuthToken)">
